@@ -37,6 +37,7 @@ Changes for 2.2.3rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-7651] fixed item configuration flexible interval adding (Eduard)
 ..F....... [ZBX-7630] fixed latest issues link on monitoring events (Eduard)
 
 --------------------------------------------------------------------------------
